--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=onlinedoc_school
+DB_USERNAME=onlinedoc_admin
+DB_PASSWORD=IrgedeJF1
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
