--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,5 @@ yarn-error.log
 _ide_helper.php
 _ide_helper_models.php
 .phpstorm.meta.php
-_test
-public/images
-
+/public/files/_root
+/public/images/*
